load readtheorg-theme

--- a/proposal.html
+++ b/proposal.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-03-31 Sun 21:31 -->
+<!-- 2019-04-01 Mon 09:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>proposal</title>
@@ -195,6 +195,12 @@
   .org-svg { width: 90%; }
   /*]]>*/-->
 </style>
+<link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/styles/readtheorg/css/htmlize.css"/>
+<link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/styles/readtheorg/css/readtheorg.css"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/styles/lib/js/jquery.stickytableheaders.min.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/styles/readtheorg/js/readtheorg.js"></script>
 <script type="text/javascript">
 /*
 @licstart  The following is the entire license notice for the
@@ -272,18 +278,18 @@ for the JavaScript code in this tag.
 </h1>
 
 
-<div id="outline-container-org5f51a7d" class="outline-2">
-<h2 id="org5f51a7d">Name</h2>
-<div class="outline-text-2" id="text-org5f51a7d">
+<div id="outline-container-org0a03f7b" class="outline-2">
+<h2 id="org0a03f7b">Name</h2>
+<div class="outline-text-2" id="text-org0a03f7b">
 <p>
 Yadong Cheung 张亚栋
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgca9e6bf" class="outline-2">
-<h2 id="orgca9e6bf">Contact</h2>
-<div class="outline-text-2" id="text-orgca9e6bf">
+<div id="outline-container-orgc93d450" class="outline-2">
+<h2 id="orgc93d450">Contact</h2>
+<div class="outline-text-2" id="text-orgc93d450">
 <p>
 <b>Email:</b>
 </p>
@@ -302,26 +308,26 @@ zhyd007@gmail.com
 </div>
 </div>
 
-<div id="outline-container-org31863a5" class="outline-2">
-<h2 id="org31863a5"><span class="todo TODO">TODO</span> Synopsis</h2>
+<div id="outline-container-orga167868" class="outline-2">
+<h2 id="orga167868"><span class="todo TODO">TODO</span> Synopsis</h2>
 </div>
 
-<div id="outline-container-orge9546c0" class="outline-2">
-<h2 id="orge9546c0">Benefits</h2>
-<div class="outline-text-2" id="text-orge9546c0">
+<div id="outline-container-orgfc4516d" class="outline-2">
+<h2 id="orgfc4516d">Benefits</h2>
+<div class="outline-text-2" id="text-orgfc4516d">
 <p>
 More user-friendly and powerful outliner.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org27e2fa5" class="outline-2">
-<h2 id="org27e2fa5"><span class="todo TODO">TODO</span> Deliverables</h2>
+<div id="outline-container-orgc219004" class="outline-2">
+<h2 id="orgc219004"><span class="todo TODO">TODO</span> Deliverables</h2>
 </div>
 
-<div id="outline-container-org5935871" class="outline-2">
-<h2 id="org5935871">Project Details</h2>
-<div class="outline-text-2" id="text-org5935871">
+<div id="outline-container-org3e206d0" class="outline-2">
+<h2 id="org3e206d0">Project Details</h2>
+<div class="outline-text-2" id="text-org3e206d0">
 <ul class="org-ul">
 <li class="off"><code>[&#xa0;]</code> Shift-select to select a range of items.</li>
 <li class="off"><code>[&#xa0;]</code> Box selection by simple click and drag.</li>
@@ -333,13 +339,13 @@ More user-friendly and powerful outliner.
 </div>
 </div>
 
-<div id="outline-container-orgbe60496" class="outline-2">
-<h2 id="orgbe60496"><span class="todo TODO">TODO</span> Project Schedule</h2>
+<div id="outline-container-org1d76e72" class="outline-2">
+<h2 id="org1d76e72"><span class="todo TODO">TODO</span> Project Schedule</h2>
 </div>
 
-<div id="outline-container-orgfc3e02a" class="outline-2">
-<h2 id="orgfc3e02a">Bio</h2>
-<div class="outline-text-2" id="text-orgfc3e02a">
+<div id="outline-container-org264c304" class="outline-2">
+<h2 id="org264c304">Bio</h2>
+<div class="outline-text-2" id="text-org264c304">
 <p>
   My name is Yadong Cheung, I live in China.
 Currently studying at East China Normal University(ECNU).
@@ -350,12 +356,12 @@ typesetting system, last year.
 </p>
 </div>
 
-<div id="outline-container-org7f303d2" class="outline-3">
-<h3 id="org7f303d2">Programming experience</h3>
-<div class="outline-text-3" id="text-org7f303d2">
+<div id="outline-container-org71650a1" class="outline-3">
+<h3 id="org71650a1">Programming experience</h3>
+<div class="outline-text-3" id="text-org71650a1">
 <p>
 I like <b>C</b> language, and although I have no experience in products but I read the two books which are konwn as
-\\ <b>The C Programming Language</b> <i>2e</i> and
+ <b>The C Programming Language</b> <i>2e</i> and
 <b>C Primer Plus</b> <i>6e</i>. I used to programming in XCode and Eclipse.
 I learned <b>Python</b> from edx, which course is
  <a href="https://www.edx.org/course/introduction-to-computer-science-and-programming-using-python-0">Introduction to Computer Science and Programming Using Python</a>.
@@ -364,12 +370,12 @@ I learned <b>Python</b> from edx, which course is
 </div>
 </div>
 
-<div id="outline-container-org5ec4ad5" class="outline-2">
-<h2 id="org5ec4ad5">References</h2>
+<div id="outline-container-org4a57acd" class="outline-2">
+<h2 id="org4a57acd">References</h2>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-03-31 Sun 21:31</p>
+<p class="date">Created: 2019-04-01 Mon 09:28</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2)</p>
 <p class="validation"></p>
 </div>
