get some idea, not too hard

--- a/proposal.html
+++ b/proposal.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-04-01 Mon 09:36 -->
+<!-- 2019-04-01 Mon 19:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>proposal</title>
@@ -279,18 +279,18 @@ for the JavaScript code in this tag.
 </h1>
 
 
-<div id="outline-container-org2eebaa3" class="outline-2">
-<h2 id="org2eebaa3">Name</h2>
-<div class="outline-text-2" id="text-org2eebaa3">
+<div id="outline-container-org22cc2d8" class="outline-2">
+<h2 id="org22cc2d8">Name</h2>
+<div class="outline-text-2" id="text-org22cc2d8">
 <p>
 Yadong Cheung 张亚栋
 </p>
 </div>
 </div>
 
-<div id="outline-container-org02acbab" class="outline-2">
-<h2 id="org02acbab">Contact</h2>
-<div class="outline-text-2" id="text-org02acbab">
+<div id="outline-container-org4e346c4" class="outline-2">
+<h2 id="org4e346c4">Contact</h2>
+<div class="outline-text-2" id="text-org4e346c4">
 <p>
 <b>Email:</b>
 </p>
@@ -309,28 +309,32 @@ zhyd007@gmail.com
 </div>
 </div>
 
-<div id="outline-container-org115c1b0" class="outline-2">
-<h2 id="org115c1b0"><span class="todo TODO">TODO</span> Synopsis</h2>
+<div id="outline-container-org76d7c69" class="outline-2">
+<h2 id="org76d7c69"><span class="todo TODO">TODO</span> Synopsis</h2>
 </div>
 
-<div id="outline-container-org699990a" class="outline-2">
-<h2 id="org699990a">Benefits</h2>
-<div class="outline-text-2" id="text-org699990a">
+<div id="outline-container-org24140bb" class="outline-2">
+<h2 id="org24140bb">Benefits</h2>
+<div class="outline-text-2" id="text-org24140bb">
 <p>
 More user-friendly and powerful outliner.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgf7b2071" class="outline-2">
-<h2 id="orgf7b2071"><span class="todo TODO">TODO</span> Deliverables</h2>
+<div id="outline-container-org28fab68" class="outline-2">
+<h2 id="org28fab68"><span class="todo TODO">TODO</span> Deliverables</h2>
 </div>
 
-<div id="outline-container-orga79a403" class="outline-2">
-<h2 id="orga79a403">Project Details</h2>
-<div class="outline-text-2" id="text-orga79a403">
+<div id="outline-container-orga41859e" class="outline-2">
+<h2 id="orga41859e">Project Details <code>[1/6]</code></h2>
+<div class="outline-text-2" id="text-orga41859e">
+<p>
+The major code is in source/blender/editors/space_outliner path.
+</p>
 <ul class="org-ul">
-<li class="off"><code>[&#xa0;]</code> Shift-select to select a range of items.</li>
+<li class="on"><code>[X]</code> Shift-select to select a range of items.<br />
+It is related to <b>tree's traversal</b> problem,</li>
 <li class="off"><code>[&#xa0;]</code> Box selection by simple click and drag.</li>
 <li class="off"><code>[&#xa0;]</code> Shortcut keys for operations like delete, duplicate.</li>
 <li class="off"><code>[&#xa0;]</code> Arrow key navigation.</li>
@@ -340,13 +344,13 @@ More user-friendly and powerful outliner.
 </div>
 </div>
 
-<div id="outline-container-orgf02b3d3" class="outline-2">
-<h2 id="orgf02b3d3"><span class="todo TODO">TODO</span> Project Schedule</h2>
+<div id="outline-container-org2b991e7" class="outline-2">
+<h2 id="org2b991e7"><span class="todo TODO">TODO</span> Project Schedule</h2>
 </div>
 
-<div id="outline-container-orgff12e08" class="outline-2">
-<h2 id="orgff12e08">Bio</h2>
-<div class="outline-text-2" id="text-orgff12e08">
+<div id="outline-container-orgbab77f7" class="outline-2">
+<h2 id="orgbab77f7">Bio</h2>
+<div class="outline-text-2" id="text-orgbab77f7">
 <p>
   My name is Yadong Cheung, I live in China.
 Currently studying at East China Normal University(ECNU).
@@ -357,9 +361,9 @@ typesetting system, last year.
 </p>
 </div>
 
-<div id="outline-container-org654642d" class="outline-3">
-<h3 id="org654642d">Programming experience</h3>
-<div class="outline-text-3" id="text-org654642d">
+<div id="outline-container-org5926f1c" class="outline-3">
+<h3 id="org5926f1c">Programming experience</h3>
+<div class="outline-text-3" id="text-org5926f1c">
 <p>
 I like <b>C</b> language, and although I have no experience in products but I read the two books which are konwn as
  <b>The C Programming Language</b> <i>2e</i> and
@@ -371,14 +375,14 @@ I learned <b>Python</b> from edx, which course is
 </div>
 </div>
 
-<div id="outline-container-org0c76935" class="outline-2">
-<h2 id="org0c76935">References</h2>
+<div id="outline-container-orgae968dd" class="outline-2">
+<h2 id="orgae968dd">References</h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2019-03-31 Sun 21:31</p>
 <p class="author">Author: Yadong Cheung</p>
-<p class="date">Created: 2019-04-01 Mon 09:36</p>
+<p class="date">Created: 2019-04-01 Mon 19:04</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2)</p>
 <p class="validation"></p>
 </div>
