do some details

--- a/proposal.html
+++ b/proposal.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-04-01 Mon 19:04 -->
+<!-- 2019-04-01 Mon 20:39 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>proposal</title>
@@ -279,18 +279,18 @@ for the JavaScript code in this tag.
 </h1>
 
 
-<div id="outline-container-org22cc2d8" class="outline-2">
-<h2 id="org22cc2d8">Name</h2>
-<div class="outline-text-2" id="text-org22cc2d8">
+<div id="outline-container-org8f4ba06" class="outline-2">
+<h2 id="org8f4ba06">Name</h2>
+<div class="outline-text-2" id="text-org8f4ba06">
 <p>
 Yadong Cheung 张亚栋
 </p>
 </div>
 </div>
 
-<div id="outline-container-org4e346c4" class="outline-2">
-<h2 id="org4e346c4">Contact</h2>
-<div class="outline-text-2" id="text-org4e346c4">
+<div id="outline-container-orgd5befa2" class="outline-2">
+<h2 id="orgd5befa2">Contact</h2>
+<div class="outline-text-2" id="text-orgd5befa2">
 <p>
 <b>Email:</b>
 </p>
@@ -309,28 +309,29 @@ zhyd007@gmail.com
 </div>
 </div>
 
-<div id="outline-container-org76d7c69" class="outline-2">
-<h2 id="org76d7c69"><span class="todo TODO">TODO</span> Synopsis</h2>
+<div id="outline-container-org34c43ad" class="outline-2">
+<h2 id="org34c43ad"><span class="todo TODO">TODO</span> Synopsis</h2>
 </div>
 
-<div id="outline-container-org24140bb" class="outline-2">
-<h2 id="org24140bb">Benefits</h2>
-<div class="outline-text-2" id="text-org24140bb">
+<div id="outline-container-orgce0a14d" class="outline-2">
+<h2 id="orgce0a14d">Benefits</h2>
+<div class="outline-text-2" id="text-orgce0a14d">
 <p>
 More user-friendly and powerful outliner.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org28fab68" class="outline-2">
-<h2 id="org28fab68"><span class="todo TODO">TODO</span> Deliverables</h2>
+<div id="outline-container-org2b630a4" class="outline-2">
+<h2 id="org2b630a4"><span class="todo TODO">TODO</span> Deliverables</h2>
 </div>
 
-<div id="outline-container-orga41859e" class="outline-2">
-<h2 id="orga41859e">Project Details <code>[1/6]</code></h2>
-<div class="outline-text-2" id="text-orga41859e">
+<div id="outline-container-org8f9257a" class="outline-2">
+<h2 id="org8f9257a">Project Details <code>[2/6]</code></h2>
+<div class="outline-text-2" id="text-org8f9257a">
 <p>
-The major code is in source/blender/editors/space_outliner path.
+ The major code is in <i>source/blender/editors/</i> <b>space_outliner</b> &amp;&amp; <b>space_view3d</b>
+path.
 </p>
 <ul class="org-ul">
 <li class="on"><code>[X]</code> Shift-select to select a range of items.<br />
@@ -339,18 +340,18 @@ It is related to <b>tree's traversal</b> problem,</li>
 <li class="off"><code>[&#xa0;]</code> Shortcut keys for operations like delete, duplicate.</li>
 <li class="off"><code>[&#xa0;]</code> Arrow key navigation.</li>
 <li class="off"><code>[&#xa0;]</code> More consistent and powerful right-click menus.</li>
-<li class="off"><code>[&#xa0;]</code> Sync selection between 3D viewport and outliner.</li>
+<li class="on"><code>[X]</code> Sync selection between 3D viewport and outliner.<br />
+This has higher priority than the 1st item.</li>
 </ul>
 </div>
 </div>
-
-<div id="outline-container-org2b991e7" class="outline-2">
-<h2 id="org2b991e7"><span class="todo TODO">TODO</span> Project Schedule</h2>
+<div id="outline-container-org31b709e" class="outline-2">
+<h2 id="org31b709e"><span class="todo TODO">TODO</span> Project Schedule</h2>
 </div>
 
-<div id="outline-container-orgbab77f7" class="outline-2">
-<h2 id="orgbab77f7">Bio</h2>
-<div class="outline-text-2" id="text-orgbab77f7">
+<div id="outline-container-orgcc4af2a" class="outline-2">
+<h2 id="orgcc4af2a">Bio</h2>
+<div class="outline-text-2" id="text-orgcc4af2a">
 <p>
   My name is Yadong Cheung, I live in China.
 Currently studying at East China Normal University(ECNU).
@@ -361,9 +362,9 @@ typesetting system, last year.
 </p>
 </div>
 
-<div id="outline-container-org5926f1c" class="outline-3">
-<h3 id="org5926f1c">Programming experience</h3>
-<div class="outline-text-3" id="text-org5926f1c">
+<div id="outline-container-org00df00b" class="outline-3">
+<h3 id="org00df00b">Programming experience</h3>
+<div class="outline-text-3" id="text-org00df00b">
 <p>
 I like <b>C</b> language, and although I have no experience in products but I read the two books which are konwn as
  <b>The C Programming Language</b> <i>2e</i> and
@@ -375,14 +376,14 @@ I learned <b>Python</b> from edx, which course is
 </div>
 </div>
 
-<div id="outline-container-orgae968dd" class="outline-2">
-<h2 id="orgae968dd">References</h2>
+<div id="outline-container-org002da9d" class="outline-2">
+<h2 id="org002da9d">References</h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2019-03-31 Sun 21:31</p>
 <p class="author">Author: Yadong Cheung</p>
-<p class="date">Created: 2019-04-01 Mon 19:04</p>
+<p class="date">Created: 2019-04-01 Mon 20:39</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2)</p>
 <p class="validation"></p>
 </div>
